[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/characters/TriggeredDialogue.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/interface/bulle_9patch.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/interface/pkmnfl.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/ui/interface/trigger_event.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=51]
size = 8
font_data = ExtResource( 3 )

[node name="TriggeredDialogue" type="NinePatchRect"]
light_mask = 0
margin_left = -32.0
margin_top = -16.0
margin_right = 32.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 32, 16 )
texture = ExtResource( 2 )
patch_margin_left = 18
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 14
script = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -13.0

[node name="TriggerTexture" type="TextureRect" parent="Margin"]
margin_right = 50.0
margin_bottom = 13.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
margin_right = 50.0
margin_bottom = 13.0

[node name="DialogueText" type="Label" parent="Margin/VBoxContainer"]
margin_right = 50.0
margin_bottom = 4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 5
custom_fonts/font = SubResource( 51 )
text = "1234567890"
valign = 1
autowrap = true

[node name="Prompter" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="Prompter" to="." method="dialogue_prompter"]
